<resources>
    <string name="app_name">Inz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanner_start">Skanuj kod</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="let_show">Pokaż się</string>
    <string name="find_others">Znajdź inne</string>
    <string name="show_paired">Pokaż sparowane</string>
    <string name="be_server">Serwer</string>
    <string name="be_client">Klient</string>
    <string name="state">Stan</string>
    <string name="tv_mac">Adres MAC serwera</string>
    <string name="bluetooth_btn">Zmień serwer</string>
    <string name="title_activity_btdevices_list">BTDevicesList</string>
    <string name="bondedStatus">Sparowany</string>
    <string name="not_bondedStatus">Niesparowany</string>
    <string name="choose_device">Wybierz serwer:</string>
    <string name="device_searching">Wyszukiwanie...</string>
    <string name="bt_dialog_question">Czy chcesz sie połączyć z serwerem:</string>
    <string name="bt_dialog_connect">Połącz</string>
    <string name="bt_dialog_another">Wyszukaj serwer</string>
    <string name="begin_panel_lack_of_connection">Brak połączenia!</string>
    <string name="begin_panel_question_1">Połączenie z serwerem nie jest nawiązane</string>
    <string name="begin_panel_to_database">Dodaj do bazy towarów</string>
    <string name="begin_panel_type_name">Wpisz kod ręcznie</string>
    <string name="title_activity_scan_product">ScanProduct</string>
    <string name="amount_of">Ilość</string>
    <string name="barCodeOf">Kod Kreskowy:</string>
    <string name="ok">Ok</string>
    <string name="nameOf">Nazwa:</string>
    <string name="codeOf">Kod z kasy:</string>
    <string name="addBarcode">Dodaj kod kreskowy</string>
    <string name="addToDatabase">Dodaj do bazy danych</string>
    <string name="barcodeOf">Kod kreskowy</string>
    <string name="title_activity_product_list">ProductList</string>
    <string name="get_products">Pokaż produkty w bazie</string>
    <string name="list_of_products_from">Lista produktów</string>
    <string name="max_quantity_to_show">Ilość sztuk produktu poniżej:</string>
    <string name="show_all">Wyświetl wszystkie</string>
    <string name="show_selected">Wyświetl wybrane</string>
    <string name="vat_groups_spinner_prompt">Wybierz grupę VAT</string>
    <string name="vat_groups_label">Grupa podatkowa VAT:</string>
    <string name="is_packaging">Jest opakowaniem?</string>
    <string name="price">Cena</string>
    <string name="cancel">Anuluj</string>
    <string name="toast_name_empty">Wprowadź nazwę</string>
    <string name="toast_barcode_empty">Wprowadź kod kreskowy</string>
    <string name="toast_name_too_much_cases">Nazwa musi miec mniej niż 19 znaków</string>
    <string name="toast_barcode_wrong_length">Kod kreskowy musi mieć 13 znaków</string>
    <string name="toast_barcode_wrong">Kod kreskowy jest niepoprawny</string>
    <string name="toast_price_empty">Wprowadź cenę</string>
    <string name="toast_price_too_high">Za duża cena</string>
    <string name="toast_price_coma_places">Cena może mieć dwa miejsca po przecinku</string>
    <string name="toast_amount_empty">Wprowadź ilość</string>
    <string name="toast_amount_too_high">Ilość musi być mniejsza niż 100</string>
    <string name="toast_vat_empty">Wybierz grupę VAT</string>
    <string name="toast_quantity_empty">Wprowadź ilość</string>
    <string name="toast_quantity_too_high">Ilość musi być mniejsza od 100</string>

    <string-array name="vat_groups">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </string-array>
    <string name="title_activity_error_list">ErrorList</string>
    <string name="show_errors_label">Pokaż błędy</string>
</resources>
