<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.edu.pw.sgalazka.inz.bluetooth.BluetoothActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_show"
        android:id="@+id/let_show"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_others"
        android:id="@+id/find_others"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_paired"
        android:id="@+id/show_paired"
        android:layout_below="@+id/let_show"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_server"
        android:id="@+id/be_server"
        android:singleLine="true"
        android:layout_below="@+id/show_paired"
        android:layout_alignEnd="@+id/let_show" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_client"
        android:id="@+id/be_client"
        android:layout_alignTop="@+id/be_server"
        android:layout_toEndOf="@+id/show_paired" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView"
        android:layout_below="@+id/be_server"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/state"
        android:id="@+id/state"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/be_server" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mac_adress"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="MAC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tv_mac"
        android:id="@+id/tv_mac"
        android:layout_above="@+id/mac_adress"
        android:layout_alignParentStart="true" />
</RelativeLayout>
