<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.edu.pw.sgalazka.client.activities.AddToDatabase">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addToDatabaseNameOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/nameOf"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:labelFor="@+id/addToDatabaseName"/>

        <EditText
            android:id="@+id/addToDatabaseName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addToDatabaseNameOf"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/addToDatabasePriceOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addToDatabaseName"
            android:layout_centerHorizontal="true"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/addToDatabase_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/addToDatabaseName"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addToDatabasePriceOf"
            android:ems="10"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/addToDatabaseAmountOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addToDatabase_price"
            android:layout_centerHorizontal="true"
            android:text="@string/amount_of"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/addToDatabaseAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addToDatabaseAmountOf"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/addToDatabaseVat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addToDatabaseAmount"
            android:layout_centerHorizontal="true"
            android:text="@string/vat_groups_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/addToDatabase_vat_spinner"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/addToDatabaseVat"
            android:entries="@array/vat_groups"
            android:prompt="@string/vat_groups_spinner_prompt"
            />

        <CheckBox
            android:id="@+id/is_packaging_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addToDatabase_vat_spinner"
            android:text="@string/is_packaging"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_alignParentRight="true"/>


        <TextView
            android:id="@+id/addToDatabaseBarcodeOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/is_packaging_checkbox"
            android:layout_centerHorizontal="true"
            android:text="@string/barcodeOf"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="30dp"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/addToDatabaseBarcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/addToDatabaseAmount"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addToDatabaseBarcodeOf"
            android:ems="10"
            android:inputType="number"
            android:maxLength="13"
            android:singleLine="true"
            android:textSize="30sp" />

        <Button
            android:id="@+id/addToDatabaseAddBarcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addToDatabaseBarcode"
            android:text="@string/addBarcode"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addToDatabase_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/addToDatabaseAmount"
            android:layout_below="@+id/addToDatabaseAddBarcode"
            android:text="@string/addToDatabase"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>