<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.productList.ProductListChooser">

    <TextView
        android:id="@+id/plchooser_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/max_quantity_to_show"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true"
        android:textSize="34dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/plchooser_quantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plchooser_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/plchoooser_show_selected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plchooser_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/show_selected"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/plchooser_show_all"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plchoooser_show_selected"
        android:layout_centerHorizontal="true"
        android:text="@string/show_all"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
